--- a/section1/canvas_state.html
+++ b/section1/canvas_state.html
@@ -7,9 +7,18 @@
   <body>
     <canvas height="500" width="500" style="border:2px solid #000000" id="ctx"/>
     <script type="text/javascript">
+
       var ctx = document.getElementById('ctx').getContext('2d');
       ctx.font = '30px Callibri'
-      ctx.fillText("Hello World", 150, 250);
+      ctx.fillText("Sample", 200, 100);
+      ctx.save(); //checkpoint
+
+      ctx.fillStyle = 'red';
+      ctx.fillRect(200,200,100,100);
+
+      ctx.restore(); //restore to checkpoint
+      ctx.fillText("Sample", 200, 400);
+
     </script>
   </body>
 </html>
