--- a/section1/drawing_more_elements.html
+++ b/section1/drawing_more_elements.html
@@ -7,9 +7,18 @@
   <body>
     <canvas height="500" width="500" style="border:2px solid #000000" id="ctx"/>
     <script type="text/javascript">
+
       var ctx = document.getElementById('ctx').getContext('2d');
       ctx.font = '30px Callibri'
-      ctx.fillText("Hello World", 150, 250);
+      ctx.strokeText("Hello World", 150, 250);
+
+      ctx.moveTo(100,300);
+      ctx.lineTo(200,300);
+      ctx.stroke();
+
+      ctx.fillStyle = '#efa556';
+      ctx.fillRect(300,400,150,50);
+
     </script>
   </body>
 </html>
